--- a/1. Weather App/style.css
+++ b/1. Weather App/style.css
@@ -72,6 +72,18 @@ body{
     margin-top: -10px;
 }
 
+.weather{
+    display: none;
+}
+
+.error{
+    text-align: left;
+    margin-left: 10px;
+    font-size: 14px;
+    margin-top: 10px;
+    display: none;
+}
+
 .details{
     display: flex;
     align-items: center;
