--- a/1. Weather App/style.css
+++ b/1. Weather App/style.css
@@ -60,6 +60,7 @@ body{
 .weather-icon{
     width: 170px;
     margin-top: 30px;
+    filter: drop-shadow(5px 5px 5px #3939391f);
 }
 
 .weather h1{
